# ros_protobuf_msg

./: CMakeLists.txt  pb_listener.cpp  pb_talker.cpp
docker/scripts/: ros_docker_run.sh
message_serialization/: CMakeLists.txt
message_serialization/include/ros/: roscpp_serialization_macros.h  serialization.h  serialization_protobuffer.h  serialized_message.h
message_traits/: CMakeLists.txt
message_traits/include/ros/: message_event.h  message_traits.h  protobuffer_traits.h
roscpp/include/ros/: node_handle.h  publisher.h
roscpp/src/libros/: connection.cpp  connection_manager.cpp  init.cpp  intraprocess_publisher_link.cpp  intraprocess_subscriber_link.cpp  io.cpp  master.cpp  node_handle.cpp  poll_manager.cpp  poll_set.cpp  publication.cpp  publisher.cpp  topic_manager.cpp  transport_subscriber_link.cpp
roscpp/src/libros/transport/: transport_tcp.cpp
sample_protos/: CMakeLists.txt
test/: sfinae_test.cc  sfinae_test.h  test_proto.cpp  test_template.cc  test_template.h
